--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+#root,
+body {
+  height: 100vh;
+  width: 100vw;
+}
+
 .App {
   text-align: center;
   display: flex;
   flex-direction: column;
+  height: 100%;
+}
+
+#g_id_onload {
+  flex: 1;
 }
